# MADE

./: .gitignore  CLAUDE.md  MADE_architecture.md  README.md
.claude/: settings.json
.claude/commands/: adapt.md  orchestrate.md  profile.md  reflect.md  review.md  status.md  verify.md
docs/architecture/: ARCHITECTURE.md  DECISIONS.md  INTERFACES.md  INVARIANTS.md  PATTERNS.md
docs/architecture/module_specs/: _TEMPLATE.md
meta/: adaptation_rules.yaml  agent_registry.yaml  performance_log.jsonl
meta/context_templates/: infrastructure.md  interface_io.md  numerics.md  orchestrator.md  review.md  test_verification.md
meta/hooks/: adapt_context.py  post_task_reflect.py  quality_gate.py  update_patterns.py
meta/schemas/: adr.schema.json  performance_entry.schema.json  task_state.schema.json
scripts/: index_codebase.py  setup.sh
src/: CMakeLists.txt
tools/: build_check.sh  convergence_study.py  coverage_report.sh  index_codebase.py  invariant_check.py  profile_run.sh  regression_compare.py  run_tests.sh
workflows/: bug_fix.yaml  feature_development.yaml  performance_optimization.yaml  verification_validation.yaml
workflows/templates/: agent_handoff.md  review_checklist.md  task_decomposition.md
